...
            title="People"
            items={results.users || []}
            icon="user"
            onPress={(item) => router.push(`/friends/${item.id}`)}
          />
          <Result
            title="Groups"
            items={results.groups || []}
            icon="team"
            onPress={(item) => router.push(`/groups/${item.id}`)}
          />
          <Result
            title="Expenses"
...
